Added functionality to add embeddings

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ FILE_REPO_TEMP_BASE=./temp
 FILE_REPO_PORT=8080
 FILE_REPO_HOST=0.0.0.0
 FILE_REPO_LOG_LEVEL=INFO
+
+GEMINI_API_KEY=AIzaSyDbQaXvCiQTeVstE-ev5omm19CeCESig5Y
