--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,13 @@
             <version>2.9.1</version>
         </dependency>
 
+        <!-- PDFBox for PDF processing -->
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>2.0.30</version>
+        </dependency>
+
         <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
